Add Multiple Rows And Functionality

--- a/index.html
+++ b/index.html
@@ -14,12 +14,32 @@
 
 <div class="row">
 	<div class="container">
-		<div class="col-md-4">
-			<h4>Single Date Picker</h4>
+		<div class="col-md-12">
+			
+			<div class="table-responsive">
+				<table id="singlePicker" class="table table-bordered">
+					<tr>
+						<td>Single Date Picker</td>
+						<td><input type="text" class="datePicker" /></td>
+					</tr>
+				</table>
+				<button onclick="addSingleDatePicker()" class="btn btn-success">Add More</button>
+			</div>
+			<div class="table-responsive">
+				<table id="rangePicker" class="table table-bordered">
+					<tr>
+						<td>Date Range Picker</td>
+						<td><input type="text" class="daterange" /></td>
+					</tr>
+				</table>
+				<button onclick="addDateRangePicker()" class="btn btn-success">Add More</button>
+			</div>
+			
+			<!-- <h4>Single Date Picker</h4>
 			<input type="text" class="datePicker" />
 		
 			<h4>Date Range Picker</h4>
-			<input type="text" class="daterange" />
+			<input type="text" class="daterange" /> -->
 		</div>
 	</div>
 </div>
@@ -32,22 +52,68 @@
 
 <script type="text/javascript">
 
-	$('.daterange').daterangepicker();
-
-</script>
-<script type="text/javascript">
-$(function() {
-    $('.datePicker').daterangepicker({
-        singleDatePicker: true,
-        showDropdowns: true,
-        locale: {
-     		format: 'DD-MM-YYYY'
-		},
+	 /*Script start for dateRangePicker*/
+    $(document).ready(function(){
+        $(document).on('click', '.daterange', function(){
+            $(this).daterangepicker({
+				showDropdowns: true,     //Show dropdown year and month
+				locale: {
+					format: 'DD-MM-YYYY',
+					
+				},
+            }).focus();
+            $(this).removeClass('datePicker');
+        });
     });
-});
+    /*Script end for dateRangePicker*/
+
 </script>
 
+<script type="text/javascript">
+	
+	 /*Script start for datepicker*/
+    $(document).ready(function(){
+    	 var start = moment().subtract(29, 'days');
+		var end = moment();
+		
+        $(document).on('click', '.datePicker', function(){
+        	var context = this;    //hold the current context
+            $(this).daterangepicker({
+            	 autoUpdateInput: true,
+              	/*timePicker:true,*/     //enable datepicker tihe time
+				singleDatePicker: true,  //For single datepicker
+				showDropdowns: true,     //Show dropdown year and month
+				locale: {
+					cancelLabel: 'Clear',
+					format: 'DD-MM-YYYY'    //format of selected date
+					/*format: 'MM/DD/YYYY h:mm A'*/ //this is for date with time
+				},
+            }).focus();
+            $(this).removeClass('datePicker');
+        });
+    });
+    /*Script end for datepicker*/
+</script>
 
+<script type="text/javascript">
+	//Add row for single date picker
+	function addSingleDatePicker(){
+		var row = "<tr>"+
+						"<td>Single Date Picker</td>"+
+						"<td><input type='text' class='datePicker'/></td>"+
+					"</tr>";
+		$("#singlePicker").append(row);
+	}
+
+	//add row for date range picker
+	function addDateRangePicker(){
+		var row = '<tr>'+
+						'<td>Date Range Picker</td>'+
+						'<td><input type="text" class="daterange" /></td>'+
+					'</tr>';
+		$("#rangePicker").append(row);					
+	}
+</script>
 </body>
 
 </html
